--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Happy Birthday JavaScript!</title>
+  <title>Happy Birthday</title>
   <link rel='stylesheet' href='https://unpkg.com/splitting/dist/splitting.css'>
 <link rel='stylesheet' href='https://unpkg.com/splitting/dist/splitting-cells.css'><link rel="stylesheet" href="./style.css">
 
@@ -10,7 +10,7 @@
 <body>
 <!-- partial:index.partial.html -->
 <div class="container">
-  <div class="text" data-splitting="">Happy Birthday, JavaScript!</div>
+  <div class="text" data-splitting="">Happy Birthday</div>
   <div class="presents">
     <div class="present orange">
       <div class="lid"></div>
